@@ -19,6 +19,6 @@ G140 = {
   :trends_count => 10,
   :tweets_per_hashtag => 5,
   :periodic_update_frequency => 30,
-  :default_trending_filter => 1.day.ago,
+  :default_trending_filter => 1,
   :latest_version => "0.3.3"
 }
