@@ -37,9 +37,9 @@ mk:
       this_week_short: "Н"
       this_month_short: "M"
       archive_short: "A"
-      today: "Денес"
-      this_week: "Оваа недела"
-      this_month: "Овој месец"
+      today: "Изминативе 24 часа"
+      this_week: "Изминативе 7 дена"
+      this_month: "Изминатиов месец"
       archive: "Архива"
     follow: "Следи"
     you_follow: "Го следиш"
